[package]
name = "bpfdeploy-libbpf-sys"
version = "1.0.1+v1.0.0"
description = "Fork of libbpf-sys"
readme = "README.md"
repository = "https://github.com/bpfdeploy-io/libbpf-sys"
homepage = "https://bpfdeploy.io"
keywords = ["bpf", "ebpf", "xdp"]
authors = [
	"Milan <milan@mdaverde.com>",
	"bpfdeploy.io <team@bpfdeploy.io>"
]
license = "BSD-2-Clause"
edition = "2018"
build = "build.rs"
links = "libbpf-bpfdeploy"

[build-dependencies]
bindgen = { version = "^0.60", optional = true }
cc = "^1.0"
pkg-config = "0.3"

[lib]
crate-type = ["lib", "staticlib"]

[features]
novendor = []
static = []
